wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: wordpress
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
