ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
  namespace: wordpress
spec:
  ingressClassName: nginx
  rules:
  - host: "protem.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wordpress-service
            port: 
              number: 80
